--- a/springdb/pom.xml
+++ b/springdb/pom.xml
@@ -44,6 +44,10 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.neo4j.driver</groupId>
+			<artifactId>neo4j-java-driver</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
