--- a/springdb/pom.xml
+++ b/springdb/pom.xml
@@ -15,6 +15,7 @@
 	<description>Database layer</description>
 	<properties>
 		<java.version>11</java.version>
+		<jackson.version>2.13.1</jackson.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,6 +49,18 @@
 			<groupId>org.neo4j.driver</groupId>
 			<artifactId>neo4j-java-driver</artifactId>
 		</dependency>
+	        <dependency>
+	            <groupId>com.fasterxml.jackson.core</groupId>
+	            <artifactId>jackson-core</artifactId>
+	        </dependency>
+	        <dependency>
+	            <groupId>com.fasterxml.jackson.core</groupId>
+	            <artifactId>jackson-databind</artifactId>
+	        </dependency>
+	        <dependency>
+	            <groupId>com.fasterxml.jackson.core</groupId>
+	            <artifactId>jackson-annotations</artifactId>
+	        </dependency>
 	</dependencies>
 
 	<build>
