--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,6 +26,7 @@ jobs:
     - name: Build with Maven
       run: |
         cd springdb
-        ./mvnw -B package --file pom.xml
+        ./mvnw -DskipTests install
+#        ./mvnw -B package --file pom.xml
     - name: Run end-to-end tests
       run: ./mvnw -Dtest="EndToEndTests" test
