--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,4 +29,6 @@ jobs:
         ./mvnw -DskipTests install
 #        ./mvnw -B package --file pom.xml
     - name: Run end-to-end tests
-      run: ./mvnw -Dtest="EndToEndTests" test
+      run: |
+        cd springdb
+        ./mvnw -Dtest="EndToEndTests" test
