--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,11 +4,12 @@
 name: Java CI with Maven
 
 on:
-  workflow_dispatch
- push:
-   branches: [ master ]
- pull_request:
-   branches: [ master ]
+  push:
+   branches: 
+    - 'master'
+  pull_request:
+   branches:
+    - 'master'
 
 jobs:
   build:
