--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,7 @@ name: Java CI with Maven
 
 on:
   workflow_dispatch:
-    
+
   push:
    branches: 
     - 'master'
@@ -31,9 +31,8 @@ jobs:
         cd springdb
         ./mvnw -DskipTests install
 #        ./mvnw -B package --file pom.xml
-  test:
-    steps:
-    - name: Run end-to-end tests
+
+    - name: Run application tests
       run: |
         cd springdb
         ./mvnw -Dtest="SpringdbApplicationTests" test
