--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,8 +14,8 @@ on:
     - 'master'
 
 jobs:
-  build:
-
+  
+  setup:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,12 +26,21 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
+  build:
+    needs: setup
+    runs-on: ubuntu-latest
+
+    steps:
     - name: Build with Maven
       run: |
         cd springdb
         ./mvnw -DskipTests install
 #        ./mvnw -B package --file pom.xml
-
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    
+    steps:
     - name: Run application tests
       run: |
         cd springdb
