--- a/springdb/frontend/package.json
+++ b/springdb/frontend/package.json
@@ -46,6 +46,8 @@
     "@testing-library/jest-dom": "^5.16.2",
     "apexcharts": "^3.33.1",
     "change-case": "^4.1.2",
+    "cytoscape": "^3.21.0",
+    "cytoscape-popper": "^2.0.0",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.6",
