--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,11 +13,9 @@ on:
    branches:
     - 'master'
 
-jobs:
-  
-  setup:
+jobs:  
+  build:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
@@ -26,12 +24,6 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-  build:
-    needs: setup
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
     - name: Build with Maven
       run: |
         cd springdb
@@ -43,6 +35,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: maven
     - name: Run application tests
       run: |
         cd springdb
