--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Build with Maven
       run: |
         cd springdb
-        ./mvnw -DskipTests install
+        mvn -DskipTests install
 #        ./mvnw -B package --file pom.xml
   test:
     needs: build
@@ -57,9 +57,9 @@ jobs:
     - name: Run application tests
       run: |
         cd springdb
-        ./mvnw -Dtest="SpringdbApplicationTests" test
+        mvn -Dtest="SpringdbApplicationTests" test
 
     - name: Run end-to-end tests
       run: |
         cd springdb
-        ./mvnw -Dtest="EndToEndTests" test
+        mvn -Dtest="EndToEndTests" test
