--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,6 +35,19 @@ jobs:
         cd springdb
         mvn -DskipTests install
 #        ./mvnw -B package --file pom.xml
+
+    - name: Upload back end artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: backend
+        path: springdb/target/*.jar
+
+    - name: Upload front end artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: frontend
+        path: springdb/frontend
+
   test:
     needs: build
     runs-on: ubuntu-latest
@@ -63,3 +76,40 @@ jobs:
       run: |
         cd springdb
         mvn -Dtest="EndToEndTests" test
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download back end artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: backend
+
+      - name: Move back end files to expected location
+        run: mv *.jar springdb/target
+
+      - name: Download front end artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: frontend
+
+      - name: Move front end files to expected location
+        run: mv frontend springdb/frontend
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/app:latest
