Add context to docker build and push action

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -114,5 +114,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
+          context: .
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/app:latest
