--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,55 +14,18 @@ on:
     - 'master'
 
 jobs:  
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-    - name: Set up nodejs environment
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16'
-        cache: 'npm'
-        cache-dependency-path: 'springdb/frontend/**/package-lock.json'
-    - name: Build with Maven
-      run: |
-        cd springdb
-        mvn -DskipTests install
-#        ./mvnw -B package --file pom.xml
-
-    - name: Upload back end artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: backend
-        path: springdb/target/*.jar
-
-    - name: Create front end archive
-      run: tar -zcf frontend.tar.gz springdb/frontend
-
-    - name: Upload front end artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: frontend
-        path: frontend.tar.gz
-
   test:
-    needs: build
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
+
     - name: "Set up nodejs environment"
       uses: actions/setup-node@v2
       with:
@@ -79,9 +42,51 @@ jobs:
       run: |
         cd springdb
         mvn -Dtest="EndToEndTests" test
-  deploy:
+
+  build:
     if: ${{ github.ref == 'refs/heads/master' }}
     needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Set up nodejs environment
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          cache: 'npm'
+          cache-dependency-path: 'springdb/frontend/**/package-lock.json'
+
+      - name: Build with Maven
+        run: |
+          cd springdb
+          mvn -DskipTests install
+
+      - name: Upload back end artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: backend
+          path: springdb/target/*.jar
+
+      - name: Create front end archive
+        run: tar -zcf frontend.tar.gz springdb/frontend
+
+      - name: Upload front end artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: frontend
+          path: frontend.tar.gz
+
+  deploy:
+    if: ${{ github.ref == 'refs/heads/master' }}
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
