--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,6 +5,11 @@ name: Java CI with Maven
 
 on:
   workflow_dispatch:
+    inputs:
+      NON_MASTER_DEPLOY:
+        description: 'Deploy even if this is not on the master branch'
+        required: false
+        default: 'FALSE'
 
   push:
    branches: 
@@ -44,7 +49,7 @@ jobs:
         mvn -Dtest="EndToEndTests" test
 
   build:
-    if: ${{ github.ref == 'refs/heads/master' }}
+    if: ${{ github.ref == 'refs/heads/master' || github.event.inputs.NON_MASTER_DEPLOY == 'TRUE' }}
     needs: test
     runs-on: ubuntu-latest
     steps:
@@ -94,7 +99,7 @@ jobs:
           path: nodenpm.tar.gz
 
   deploy:
-    if: ${{ github.ref == 'refs/heads/master' }}
+    if: ${{ github.ref == 'refs/heads/master' || github.event.inputs.NON_MASTER_DEPLOY == 'TRUE' }}
     needs: build
     runs-on: ubuntu-latest
     steps:
