yuri: addressing review issues

--- a/springdb/src/main/resources/application.properties
+++ b/springdb/src/main/resources/application.properties
@@ -3,4 +3,4 @@ neo4j.user=neo4j
 neo4j.password=gradvek
 spring.thymeleaf.prefix=classpath:/static/
 opentarget.server=ftp.ebi.ac.uk
-opentarget.path=/pub/databases/opentargets/platform/22.02/output/etl/parquet/
+opentarget.path=/pub/databases/opentargets/platform/latest/etl/parquet/
