--- a/springdb/frontend/package.json
+++ b/springdb/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@minimal/material-kit-react",
+  "name": "gradevek",
   "author": "minimals.cc",
   "licence": "MIT",
   "version": "1.3.0",
@@ -38,49 +38,29 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
-    "@faker-js/faker": "^6.0.0-alpha.7",
     "@iconify/react": "^3.1.3",
     "@mui/lab": "^5.0.0-alpha.69",
     "@mui/material": "^5.4.2",
-    "@mui/utils": "^5.4.2",
     "@testing-library/jest-dom": "^5.16.2",
-    "apexcharts": "^3.33.1",
-    "change-case": "^4.1.2",
     "cytoscape": "^3.21.0",
     "cytoscape-popper": "^2.0.0",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.6",
-    "history": "^5.2.0",
-    "http-proxy-middleware": "^2.0.3",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "simplebar": "^5.3.6",
-    "simplebar-react": "^2.3.6",
-    "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "simplebar-react": "^2.3.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/eslint-parser": "^7.17.0",
     "eslint": "^8.9.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.4.0",
-    "eslint-config-react-app": "^7.0.0",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.5.1"
+    "eslint-config-react-app": "^7.0.0"
   },
 "proxy": "http://localhost:8080/"
   
