--- a/springdb/frontend/package.json
+++ b/springdb/frontend/package.json
@@ -47,6 +47,7 @@
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.6",
+    "http-proxy-middleware": "^2.0.4",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
@@ -61,7 +62,5 @@
   "devDependencies": {
     "eslint": "^8.9.0",
     "eslint-config-react-app": "^7.0.0"
-  },
-"proxy": "http://localhost:8080/"
-  
+  }
 }
