Reconcile local and host based routing

--- a/springdb/src/main/resources/application.properties
+++ b/springdb/src/main/resources/application.properties
@@ -4,3 +4,4 @@ neo4j.password=gradvek
 spring.thymeleaf.prefix=classpath:/static/
 opentarget.server=ftp.ebi.ac.uk
 opentarget.path=/pub/databases/opentargets/platform/latest/etl/parquet/
+server.servlet.context-path=/api
