Read node label and properties from CSV headers

--- a/springdb/src/main/resources/application.properties
+++ b/springdb/src/main/resources/application.properties
@@ -5,3 +5,4 @@ neoCommandBatchSize=100
 opentarget.server=ftp.ebi.ac.uk
 opentarget.path=/pub/databases/opentargets/platform/latest/etl/parquet/
 server.servlet.context-path=/api
+spring.servlet.multipart.max-file-size=10MB
