--- a/springdb/frontend/package.json
+++ b/springdb/frontend/package.json
@@ -42,6 +42,7 @@
     "@mui/lab": "^5.0.0-alpha.69",
     "@mui/material": "^5.4.2",
     "@testing-library/jest-dom": "^5.16.2",
+    "cors": "^2.8.5",
     "cytoscape": "^3.21.0",
     "cytoscape-popper": "^2.0.0",
     "date-fns": "^2.28.0",
