--- a/springdb/src/main/resources/application.properties
+++ b/springdb/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-neo4j.url=bolt://localhost:7687
+NEO4JURL=bolt://localhost:7687
 neo4j.user=neo4j
 neo4j.password=gradvek
+neo4j.init=true
 neoCommandBatchSize=100
 opentarget.server=ftp.ebi.ac.uk
 opentarget.path=/pub/databases/opentargets/platform/latest/etl/parquet/
