--- a/springdb/src/main/resources/application.properties
+++ b/springdb/src/main/resources/application.properties
@@ -2,7 +2,7 @@ NEO4JURL=bolt://localhost:7687
 neo4j.user=neo4j
 neo4j.password=gradvek
 neo4j.init=true
-neoCommandBatchSize=100
+neo4j.batch=100
 opentarget.server=ftp.ebi.ac.uk
 opentarget.path=/pub/databases/opentargets/platform/latest/etl/parquet/
 server.servlet.context-path=/api
