--- a/springdb/frontend/package.json
+++ b/springdb/frontend/package.json
@@ -39,6 +39,7 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@iconify/react": "^3.1.3",
+    "@mui/icons-material": "^5.6.0",
     "@mui/lab": "^5.0.0-alpha.69",
     "@mui/material": "^5.4.2",
     "@testing-library/jest-dom": "^5.16.2",
