--- a/springdb/frontend/package.json
+++ b/springdb/frontend/package.json
@@ -44,6 +44,7 @@
     "@mui/material": "^5.4.2",
     "@testing-library/jest-dom": "^5.16.2",
     "cytoscape": "^3.21.0",
+    "cytoscape-avsdf": "^1.0.0",
     "cytoscape-popper": "^2.0.0",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
