--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,6 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: nanasess/setup-chromedriver@v1
 
     - name: Set up JDK 11
       uses: actions/setup-java@v2
