--- a/springdb/pom.xml
+++ b/springdb/pom.xml
@@ -24,9 +24,10 @@
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>htmlunit-driver</artifactId>
+			<artifactId>selenium-java</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
