--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,6 +39,11 @@ jobs:
         cache: 'npm'
         cache-dependency-path: 'springdb/frontend/**/package-lock.json'
 
+    - name: "Start front end"
+      run: |
+        cd springdb/frontend
+        npm run start
+
     - name: Run all tests
       run: |
         cd springdb
