Build front end before running

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,6 +42,7 @@ jobs:
     - name: "Start front end"
       run: |
         cd springdb/frontend
+        npm install
         npm run start
 
     - name: Run all tests
