--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,7 +43,7 @@ jobs:
       run: |
         cd springdb/frontend
         npm install
-        npm run start
+        npm run start &
 
     - name: Run all tests
       run: |
