--- a/springdb/frontend/package.json
+++ b/springdb/frontend/package.json
@@ -63,6 +63,7 @@
   },
   "devDependencies": {
     "eslint": "^8.12.0",
-    "eslint-config-react-app": "^7.0.0"
+    "eslint-config-react-app": "^7.0.0",
+    "eslint-plugin-react": "^7.29.4"
   }
 }
