--- a/springdb/frontend/package.json
+++ b/springdb/frontend/package.json
@@ -57,6 +57,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.3",
+    "react-hot-toast": "^2.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "simplebar": "^5.3.6",
