--- a/springdb/pom.xml
+++ b/springdb/pom.xml
@@ -126,6 +126,11 @@
 			<artifactId>opencsv</artifactId>
 			<version>5.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.xerial.snappy</groupId>
+			<artifactId>snappy-java</artifactId>
+			<version>1.1.8.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
