--- a/springdb/pom.xml
+++ b/springdb/pom.xml
@@ -131,6 +131,8 @@
      	 <groupId>org.springdoc</groupId>
 	      <artifactId>springdoc-openapi-ui</artifactId>
 	      <version>${springdoc.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.xerial.snappy</groupId>
 			<artifactId>snappy-java</artifactId>
 			<version>1.1.8.4</version>
