--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -64,10 +64,11 @@ jobs:
     if: ${{ github.ref == 'refs/heads/master' || github.event.inputs.NON_MASTER_DEPLOY == 'TRUE' }}
     needs: test
     runs-on: ubuntu-latest
-    env:
-      DOCKER_TARGET_PLATFORM: linux/arm64/v8 
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
@@ -145,7 +146,9 @@ jobs:
         run: tar -xzf nodenpm.tar.gz
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: 'arm64,arm'
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
