--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,6 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: pguyot/arm-runner-action@v2
     - uses: nanasess/setup-chromedriver@v1
 
     - name: Set up JDK 11
@@ -66,6 +67,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: pguyot/arm-runner-action@v2
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -125,6 +127,7 @@ jobs:
     environment: secrets
     steps:
       - uses: actions/checkout@v2
+      - uses: pguyot/arm-runner-action@v2
 
       - name: Download back end artifacts
         uses: actions/download-artifact@v3
