--- a/springdb/Dockerfile
+++ b/springdb/Dockerfile
@@ -1,4 +1,5 @@
-FROM --platform=linux/arm64/v8 eclipse-temurin:11 AS build
+FROM eclipse-temurin:11
+ARG TARGETARCH
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
