--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ version: "3.9"
 services:
 
   neo4j:
-    image: neo4j
+    platform: linux/x86_64
+    image: amd64/neo4j
     volumes:
       - ./data:/data
     ports:
@@ -14,6 +15,7 @@ services:
       NEO4J_dbms_security_auth__minimum__password__length: 7
 
   gradvek:
+    platform: linux/x86_64
     image: sheelyn/ns_gradvek_test
     ports:
       - "3000:3000"
