--- a/springdb/src/main/resources/application.properties
+++ b/springdb/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-NEO4JURL=bolt://host.docker.internal:7687
+NEO4JURL=bolt://localhost:7687
 neo4j.user=neo4j
 neo4j.password=gradvek
 neo4j.init=true
