--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,18 +22,18 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: nanasess/setup-chromedriver@v1
 
     - name: Set up JDK 11
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
 
     - name: "Set up nodejs environment"
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
         node-version: '16'
         cache: 'npm'
@@ -161,17 +161,17 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/ns_gradvek_test:latest
 
-  deploy:
-    if: ${{ github.ref == 'refs/heads/master' || github.event.inputs.NON_MASTER_DEPLOY == 'TRUE' }}
-    needs: publish
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GCP
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.GCP_HOST }}
-          username: ${{ secrets.GCP_USERNAME }}
-          key: ${{ secrets.GCP_KEY }}
-          script: |
-            curl https://raw.githubusercontent.com/capstone-SEMIS/gradvek/${{ github.ref_name }}/demo/docker-compose.yml > docker-compose.yml
-            curl -s https://raw.githubusercontent.com/capstone-SEMIS/gradvek/${{ github.ref_name }}/demo/install.sh | bash
+  # deploy:
+  #   if: ${{ github.ref == 'refs/heads/master' || github.event.inputs.NON_MASTER_DEPLOY == 'TRUE' }}
+  #   needs: publish
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Deploy to GCP
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.GCP_HOST }}
+  #         username: ${{ secrets.GCP_USERNAME }}
+  #         key: ${{ secrets.GCP_KEY }}
+  #         script: |
+  #           curl https://raw.githubusercontent.com/capstone-SEMIS/gradvek/${{ github.ref_name }}/demo/docker-compose.yml > docker-compose.yml
+  #           curl -s https://raw.githubusercontent.com/capstone-SEMIS/gradvek/${{ github.ref_name }}/demo/install.sh | bash
