--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -152,15 +152,15 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2.1.0
         with:
-          username: ${{ ns_dockerhub.DOCKERHUB_USERNAME }}
-          password: ${{ ns_dockerhub.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ${{ ns_dockerhub.DOCKERHUB_USERNAME }}/app:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/app:latest
 
   # deploy:
   #   if: ${{ github.ref == 'refs/heads/master' || github.event.inputs.NON_MASTER_DEPLOY == 'TRUE' }}
