actions non master deploy test 2

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,7 @@ on:
     inputs:
       NON_MASTER_DEPLOY:
         description: 'Deploy even if this is not on the master branch'
-        required: true
+        required: false
         default: 'TRUE'
 
   push:
