guava version fix test

--- a/springdb/pom.xml
+++ b/springdb/pom.xml
@@ -142,6 +142,11 @@
 			<artifactId>snappy-java</artifactId>
 			<version>1.1.8.4</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>31.1-jre</version>
+		</dependency>
 	</dependencies>
 
 	<build>
